deployment/Kubernetes/overlays/general/staging/rap/rap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
